--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,7 @@ tasks:
     init: |
       # Create a local bin folder for Ollama
       mkdir -p $HOME/bin
-      curl -L https://ollama.com/download/ollama-linux-amd64 -o $HOME/bin/ollama
+      curl -fL https://ollama.com/download/ollama-linux-amd64 -o $HOME/bin/ollama
       chmod +x $HOME/bin/ollama
 
       # Persist models in the workspace
@@ -14,28 +14,25 @@ tasks:
       echo 'export OLLAMA_MODELS=/workspace/.ollama' >> ~/.bashrc
 
     command: |
-      # Set environment variables
+      # Load environment variables
       export PATH=$HOME/bin:$PATH
       export OLLAMA_MODELS=/workspace/.ollama
-      
+
       # Start Ollama service in background
-      ollama serve > /tmp/ollama.log 2>&1 &
-      
-      # Wait for Ollama to be ready
+      nohup ollama serve > /tmp/ollama.log 2>&1 &
+
+      # Wait until Ollama API is ready
       echo "Waiting for Ollama to start..."
-      sleep 5
-      
-      # Check if Ollama is running and pull model
-      if pgrep -f "ollama serve" > /dev/null; then
-        echo "Ollama is running, pulling llama3 model..."
-        ollama pull llama3
-        echo "Ollama setup complete!"
-      else
-        echo "Failed to start Ollama service"
-      fi
-      
-      # Keep the terminal open
-      bash
+      for i in {1..10}; do
+        if curl -s http://localhost:11434/api/tags > /dev/null; then
+          echo "Ollama is ready!"
+          break
+        fi
+        sleep 2
+      done
+
+      # Pull llama3 model
+      ollama pull llama3 || echo "Could not pull llama3 model."
 
 ports:
   - port: 11434
